# wlrdp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  meson.build  meson_options.txt  wlrdp.spec
.devcontainer/: Dockerfile  devcontainer.json
config/: wlrdp.conf.example  wlrdp.pam
docs/superpowers/plans/: 2026-04-16-wlrdp-phase1.md  2026-04-16-wlrdp-phase2.md  2026-04-16-wlrdp-phase3.md  2026-04-17-wlrdp-phase4.md  2026-04-18-avc444-support.md
docs/superpowers/specs/: 2026-04-16-wlrdp-design.md  2026-04-21-wlrdp-h264-freerdp-design.md
src/common/: common.h  ipc.c  ipc.h  meson.build
src/daemon/: auth.c  auth.h  main.c  meson.build  session_mgr.c  session_mgr.h
src/protocols/: meson.build  virtual-keyboard-unstable-v1.xml
src/session/: audio.c  audio.h  capture.c  capture.h  clipboard.c  clipboard.h  compositor.c  compositor.h  encoder.c  encoder.h  input.c  input.h  main.c  meson.build  rdp_peer.c  rdp_peer.h
systemd/: wlrdp.service
